darkmode.css
/*Variables*/
:root {
  --primary: #0065ff; 	/*when background is white*/
  --secondary: #00e4ff; /*when background is black*/
}

/*when not in dark mode*/
html {
	background-color: white;
	color: black;
}

button {
	background-color: white;
    border: 1px solid gray;
}

.darked, .darked button, .darked textarea, .darked div {
	background-color: black;
	color: white;
}

.darked button {
    border: 1px solid lightgray;
}

.darked button:disabled {
    color: gray;
    border: 1px solid gray;
}

.darked a,
.darked a:visited {
	color: var(--secondary);
}

.darked .settings > a {
    color: white;
}

.highlight:hover {
	background-color: lightgray;
}

.darked .highlight:hover {
	background-color: gray;
}

